iter_language/tests/corpus/valid/iter-explore.iter
queue memory

workspace clone {
  base = "."
  excludes = []
  preserve_mtime = true
  apply_back { mode = sync }}

agent claude {
  mode = interactive
  command = "claude"
}

runner {
  continue_on_error = false
  behavior = loop
}

prompt """
  Continue improving iter. When you believe the iteration is complete, write "ITER_DONE".
"""

on workspace_teardown_finished {
  shell "./scripts/on-torndown.sh {{signal.id}}"
}
