iter_language/tests/corpus/invalid/queue-shell-unknown-field.iter
queue shell {
  enqueue = "true"
  dequeue = "true"
  bogus   = "no such field"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

prompt "x"
runner { continue_on_error = false  behavior = wait }
